# project-discovery-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/agents/: repo-scout.md  report-writer.md  usage-analyst.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: copilot-instructions.md
.github/prompts/: analyze-project.prompt.md  discover-library-prompt.md  write-final-report.prompt.md
scripts/: bootstrap.sh  run_example.sh
src/libexplorer/: cli.py  config.py  discovery.py  extraction.py  github_api.py  models.py  reporting.py  scoring.py  summarization.py  verification.py
templates/: comparison_report.md.j2  final_report.md.j2  repo_card.md.j2
tests/: test_reporting.py  test_scoring.py  test_verification.py
